--- a/squid-aci.conf
+++ b/squid-aci.conf
@@ -8,24 +8,14 @@ cache_dir ufs /cache 1024 16 256
 cache_mgr kyle.brown@coreos.com
 cache_effective_user squid	
 
-## Use the below to avoid proxy-chaining
-always_direct allow all
-## Always complete the server-side handshake before client-side (recommended)
-ssl_bump server-first all
-## Allow server side certificate errors such as untrusted certificates, otherwise the connection is closed for such errors
-sslproxy_cert_error allow all
-## Or maybe deny all server side certificate errors according to your company policy
-#sslproxy_cert_error deny all
-## Accept certificates that fail verification (should only be needed if using 'sslproxy_cert_error allow all')
-sslproxy_flags DONT_VERIFY_PEER
-
-## Modify the http_port directive to perform SSL interception
-## Ensure to point to the cert/key created earlier
-## Disable SSLv2 because it isn't safe
-http_port 3128 ssl-bump cert=/etc/squid/squid.pem key=/etc/squid/squid.pem generate-host-certificates=on options=NO_SSLv2
+# only cache aci files
+acl LatestAci url_regex [-i] ^[.]*\.(latest)
 
 
+acl CacheAcis url_regex [-i] ^[.]*\.(aci)$
+cache deny LatestAci
+cache allow CacheAcis
+cache deny ALL
 
-refresh_pattern -i \.(gif|png|jpg|jpeg|ico)$ 3600       90%     43200
 refresh_pattern -i \.(aci)$ 3600       90%     43200
 
