add configs dir, add new configs, update location of ACL file.

--- a/configs/squid-aci.conf
+++ b/configs/squid-aci.conf
@@ -1,12 +1,21 @@
 visible_hostname squidaci
 http_port 3128
 http_port 3129
-acl ip_acl src 50.250.250.40/29
-http_access allow ip_acl
+#acl ip_acl src 50.250.250.40/29
+#http_access allow ip_acl
+
+
+acl allowed_networks src "/config/access.acl"
+http_access allow allowed_networks
+
 http_access deny all 
 cache_dir ufs /cache 1024 16 256
 cache_mgr kyle.brown@coreos.com
 cache_effective_user squid	
+
+#increase file size allowed
+
+maximum_object_size 250 MB
 
 # only cache aci files
 acl LatestAci url_regex [-i] ^[.]*\.(latest)
